[office] Reduce sidebar height to prevent scrollbar on otherwise empty page

--- a/src/byro/static/office/scss/_layout.scss
+++ b/src/byro/static/office/scss/_layout.scss
@@ -31,7 +31,7 @@ body {
     font-size: 14px;
     flex-grow: 0;
     flex-shrink: 0;
-    min-height: 100vh;
+    min-height: 85vh;
     border-right: 1px solid $gray-lighter;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     z-index: 1;
